tests/type-errors/03-type-mismatch.flt
// Type mismatch: cannot unify bool with int
// --- Command: dotnet run --project FunLang -- --emit-type --expr "1 + true" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:0-8
   = hint: Check that all branches of your expression return the same type
